--- a/cynabooks-api/.eslintrc.json
+++ b/cynabooks-api/.eslintrc.json
@@ -15,6 +15,7 @@
         "react"
     ],
     "rules": {
-        "@typescript-eslint/no-unused-vars": "off"
+        "@typescript-eslint/no-unused-vars": "off",
+        "@typescript-eslint/exhaustive-deps": "off"
     }
 }
