--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "license": "ISC",
   "devDependencies": {
     "@typescript-eslint/parser": "^5.0.1",
-    "eslint": "^8.7.0",
-    "prettier": "^2.5.1",
+    "eslint": "^8.52.0",
+    "prettier": "^3.1.0",
+    "prettier-eslint": "^16.1.2",
     "typescript": "^4.4.4"
   }
 }
